--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.sources=.
 sonar.inclusions=**/src/**/*.java
 sonar.exclusions=example/**/*, **/src/test/**/*
-sonar.java.binaries=**/build
+sonar.java.binaries=**/build/classes/java/main
+sonar.java.libraries=**/dependencies/*.jar
