--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs = -Xmx4096m -XX:MaxPermSize=4096m -XX:+HeapDumpOnOutOfMemoryE
 SOURCE_COMPATIBILITY = 1.8
 TARGET_COMPATIBILITY = 1.8
 
-kotlin_version=1.3.10
+kotlin.version=1.3.70
 
 ###
 PLUGIN_PROTOBUF_VER = 0.8.12
@@ -47,8 +47,9 @@ LIB_MAPSTRUCT_VER = 1.3.0.Final
 LIB_LOMBOK_VER = 1.18.8
 LIB_GRAPHQL_SCALARS_VER = 1.1.0
 LIB_GRAPHQL_JAVA_VER = 14.0
-LIB_GRAPHQL_VER = 6.0.1
+LIB_GRAPHQL_VER = 7.0.1
 LIB_GRAPHQL_SERVLET_VER = 9.0.1
+LIB_GRAPHQL_JAVA_TOOLS_VER = 6.0.2
 LIB_JFAN_VER = 0.5.0
 LIB_JUNIT_VER = 4.12
 LIB_SPRING_CORE_VER = 5.2.3.RELEASE
