--- a/graphql/build.gradle
+++ b/graphql/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     compile project(":jfantasy-core")
     compile "com.graphql-java:graphql-java-extended-scalars:${LIB_GRAPHQL_SCALARS_VER}"
     compile "com.graphql-java-kickstart:graphql-spring-boot-starter:${LIB_GRAPHQL_VER}"
+    compile "com.graphql-java-kickstart:graphql-java-tools:$LIB_GRAPHQL_JAVA_TOOLS_VER"
     compileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
     annotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
     testCompile libs['test']
