1：历史数据提交工具类

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,8 @@
 rootProject.name = 'jfantasy-framework'
-include ":jfantasy-core", ":jfantasy-storage", ":jfantasy-graphql", ":jfantasy-example"
+include ":jfantasy-core", ":jfantasy-storage", ":jfantasy-graphql", ":jfantasy-example",":jfantasy-version"
 
 project(':jfantasy-core').projectDir = "$rootDir/core" as File
 project(':jfantasy-storage').projectDir = "$rootDir/storage" as File
 project(':jfantasy-graphql').projectDir = "$rootDir/graphql" as File
+project(':jfantasy-version').projectDir = "$rootDir/version" as File
 //project(':jfantasy-example').projectDir = "$rootDir/example" as File
