不在使用 artifactory 作为 maven 私服

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,6 @@ deploy:
   before_script:
     - export GRADLE_USER_HOME=$PWD/.gradle
   script:
-    - ./gradlew artifactoryPublish
+    - ./gradlew publish
   only:
     - tags
