--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'jfantasy-framework'
-include ":jfantasy-core", ":jfantasy-storage", ":jfantasy-graphql", ":jfantasy-example",":jfantasy-version"
+include ":jfantasy-core", ":jfantasy-storage", ":jfantasy-graphql"
 
 project(':jfantasy-core').projectDir = "$rootDir/core" as File
 project(':jfantasy-storage').projectDir = "$rootDir/storage" as File
