--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,8 @@ allprojects {
         repositories {
             maven {
                 credentials {
-                    username System.getenv()['MAVEN_USER']
-                    password System.getenv()['MAVEN_PASS']
+                    username 'gitlab-ci'
+                    password '12345678'
                 }
                 url "https://maven.thuni-h.com/repository/" + System.getenv()['MAVEN_REPO_KEY']
             }
