调整相关依赖， 映入 HibernatePropertiesCustomizer 配置 hibernate.session_factory.interceptor 及 hibernate.ejb.identifier_generator_strategy_provider

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -37,6 +37,7 @@ dependencyManagement {
 dependencies {
     compile project(":jfantasy-core")
     compile project(":jfantasy-graphql")
+    compile "org.springframework.boot:spring-boot-starter-data-redis"
     compile "org.mapstruct:mapstruct:${LIB_MAPSTRUCT_VER}"
     compileOnly "org.projectlombok:lombok:$LIB_LOMBOK_VER"
     annotationProcessor "org.projectlombok:lombok:$LIB_LOMBOK_VER"
