--- a/example/src/main/resources/application.yml
+++ b/example/src/main/resources/application.yml
@@ -14,6 +14,14 @@ spring:
       testOnReturn: true
       poolPreparedStatements: true
       maxOpenPreparedStatements: 20
+  redis:
+    jedis:
+      pool:
+        max-active: 8
+        max-wait: 300
+        max-idle: 100
+        min-idle: 100
+      timeout: 1000
   jpa:
     hibernate:
       ddl-auto: update
@@ -25,8 +33,6 @@ spring:
         open-in-view: true
         jdbc:
           time_zone: GMT+8
-        session_factory:
-          interceptor: org.jfantasy.framework.dao.hibernate.interceptors.BusEntityInterceptor
         current_session_context_class: org.springframework.orm.hibernate5.SpringSessionContext
         cache:
           use_query_cache: false
@@ -35,8 +41,6 @@ spring:
             factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
         dialect: org.hibernate.dialect.MySQL55Dialect
         show_sql: true
-        ejb:
-          identifier_generator_strategy_provider: org.jfantasy.framework.dao.hibernate.spi.CustomIdentifierGeneratorStrategyProvider
     generate-ddl: false
     open-in-view: false
   quartz:
@@ -67,6 +71,15 @@ graphql:
     websocket:
       enabled: false
     exception-handlers-enabled: true
+    cors-enabled: true
+    cors:
+      allowed-origins: "*"
+      allowed-methods: GET, HEAD, POST
+      allowed-headers: Accept, Origin, Authorization, Content-Type, Last-Modified
+      allow-credentials: true
+      max-age: 3600
+  tools:
+    introspection-enabled: true
 
 logging:
   config: classpath:logback.xml
