--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ allprojects {
 
     repositories {
         maven { url "https://maven.thuni-h.com/repository/maven-public" }
+        maven { url "https://jcenter.bintray.com" }
     }
 
     configurations {
