修改 GraphQLClient 逻辑，支持多个 GraphQLClient 配置

--- a/example/src/test/resources/application.yml
+++ b/example/src/test/resources/application.yml
@@ -70,6 +70,10 @@ graphql:
   tools:
     schema-location-pattern: "**/*.graphqls"
     introspection-enabled: true
+  client:
+    GLOBAL:
+      address: http://dj.dev.thuni-h.com/graphql
+
 logging:
   path: ~/logs
   config: classpath:logback.xml
