--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.sources=.
-sonar.inclusions=**/src/**/*.java
+sonar.inclusions=**/src/main/**/*.java
 sonar.exclusions=example/**/*, **/src/test/**/*
 sonar.java.binaries=**/build/classes/java/main
 sonar.java.libraries=**/dependencies/*.jar
