--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 
 build:
   stage: build
-  image: java:8
+  image: core.harbor.thuni-h.com/library/java:8
   cache:
     paths:
       - .gradle/caches/
@@ -40,7 +40,7 @@ build:
 
 deploy:
   stage: deploy
-  image: java:8
+  image: core.harbor.thuni-h.com/library/java:8
   cache:
     paths:
       - .gradle/caches/
@@ -48,6 +48,6 @@ deploy:
   before_script:
     - export GRADLE_USER_HOME=$PWD/.gradle
   script:
-    - ./gradlew artifactoryPublish
+    - ./gradlew publish
   only:
     - tags
