--- a/core/build.gradle
+++ b/core/build.gradle
@@ -22,5 +22,5 @@ dependencies {
     compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.8'
     compileOnly 'org.projectlombok:lombok:1.18.6'
     annotationProcessor 'org.projectlombok:lombok:1.18.6'
-    testCompile libs['test']
+//    testCompile libs['test']
 }
