--- a/graphql/build.gradle
+++ b/graphql/build.gradle
@@ -10,5 +10,5 @@ dependencies {
     compile 'com.graphql-java-kickstart:graphql-spring-boot-starter:5.7.3'
     compileOnly 'org.projectlombok:lombok:1.18.6'
     annotationProcessor 'org.projectlombok:lombok:1.18.6'
-    testCompile libs['test']
+//    testCompile libs['test']
 }
