--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -8,5 +8,5 @@ dependencies {
     compile project(":jfantasy-core")
     compileOnly 'org.projectlombok:lombok:1.18.6'
     annotationProcessor 'org.projectlombok:lombok:1.18.6'
-    testCompile libs['test']
+//    testCompile libs['test']
 }
