--- a/core/build.gradle
+++ b/core/build.gradle
@@ -32,7 +32,10 @@ dependencies {
     // ognl and cglib
     compile libs['third-party']
     compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
+    compileOnly "org.springframework.boot:spring-boot-starter-data-redis"
     compileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
     annotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
+    testAnnotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
+    testCompileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
     testCompile libs['test']
 }
