--- a/example/src/test/resources/application-test.yml
+++ b/example/src/test/resources/application-test.yml
@@ -3,7 +3,7 @@ spring:
     name: server
   datasource:
     name: datasource
-    url: jdbc:mysql://api.thuni-h.com:30306/demo?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+    url: jdbc:mysql://dc3.docker.asany.cn:30306/demo?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
     username: admin
     password: CU:4icgD4MF6Q!u^
     druid:
@@ -11,17 +11,3 @@ spring:
       initialSize: 10
       maxWait: 60000
       minIdle: 1
-
-grpc:
-  server:
-    port: 6565
-    address: 0.0.0.0
-  client:
-    GLOBAL:
-      address: static://localhost:6565
-      enableKeepAlive: true
-      keepAliveWithoutCalls: true
-      negotiationType: plaintext
-
-storage:
-  url: http://demo.homeword.cn/files
