ci: 解决版本号获取问题

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ allprojects {
     apply plugin: 'idea'
 
     group = 'org.jfantasy'
-    version = (System.getenv()['CI_BUILD_TAG'] ? System.getenv()['CI_BUILD_TAG'] : "").replaceAll(/^v/, "")
+    version = System.getenv()['RELEASE_VERSION'].replaceAll(/^v/, "")
     status = 'integration'
 
     repositories {
