--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,4 @@ jobs:
         run: ./gradlew clean build -x test
 
       - name: Coverage
-        run: ./gradlew codeCoverageReport
-
-      - name: Coveralls
-        uses: ./gradlew coveralls
+        run: ./gradlew codeCoverageReport coveralls
