ci: 添加 git hooks 实现 commitlint

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,16 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+    }
+    resolutionStrategy {
+        eachPlugin {
+            if (requested.id.id == "ru.netris.commitlint") {
+                useModule("ru.netris:commitlint-plugin:${requested.version}")
+            }
+        }
+    }
+}
+
 rootProject.name = 'jfantasy-framework'
 include ":jfantasy-core", ":jfantasy-storage", ":jfantasy-graphql", ":jfantasy-desensitize", ":jfantasy-example"
 
