--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,18 @@ plugins {
     id 'jacoco'
     id "io.spring.dependency-management" version "1.0.8.RELEASE"
     id 'com.github.kt3k.coveralls' version '2.12.0'
+    id "com.star-zero.gradle.githook" version "1.2.0"
+    id "ru.netris.commitlint" version "1.4.1"
+}
+
+githook {
+    failOnMissingHooksDir = false
+    createHooksDirIfNotExist = false
+    hooks {
+        "commit-msg" {
+            task = "commitlint -Dmsgfile=\$1"
+        }
+    }
 }
 
 apply from: "$rootDir/gradle/dependencies.gradle"
