--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,7 +47,7 @@ jobs:
         base64 -d ~/.gradle/secring.gpg.b64 > ~/.gradle/secring.gpg
 
     - name: Publish
-      run: ./gradlew publish -Psigning.keyId=${{secrets.SIGNING_KEY_ID}} -Psigning.password= -Psigning.secretKeyRingFile=$(echo ~/.gradle/secring.gpg)
+      run: ./gradlew publish -Psigning.keyId=${{secrets.SIGNING_KEY_ID}} -Psigning.password=${{secrets.SIGNING_KEY_PASSWORD}} -Psigning.secretKeyRingFile=$(echo ~/.gradle/secring.gpg)
       env:
         MAVEN_USERNAME: ${{secrets.MAVEN_USERNAME}}
         MAVEN_PASSWORD: ${{secrets.MAVEN_PASSWORD}}
