--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ allprojects {
     publishing {
         repositories {
             maven {
-                url = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
+                url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2"
                 credentials {
                     username = System.getenv("MAVEN_USERNAME")
                     password = System.getenv("MAVEN_PASSWORD")
