--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,3 @@
-buildscript {
-    repositories {
-        mavenCentral()
-        mavenLocal()
-    }
-}
-
 plugins {
     id 'java'
     id 'jacoco'
@@ -24,27 +17,20 @@ githook {
     }
 }
 
-apply from: "$rootDir/gradle/dependencies.gradle"
-
 allprojects {
-    apply plugin: 'maven-publish'
-    apply plugin: 'idea'
-    apply plugin: 'signing'
-
     group = 'cn.asany.chaos'
     version = System.getenv().getOrDefault('RELEASE_VERSION', 'v0.0.0').replaceAll(/^v/, "")
     status = 'integration'
+}
 
-    repositories {
-        maven { url "https://jcenter.bintray.com" }
-    }
+subprojects {
+    apply from: "$rootDir/gradle/dependencies.gradle"
 
-    configurations {
-        apply plugin: 'java'
-        apply plugin: 'idea'
-        apply plugin: 'io.spring.dependency-management'
-
-    }
+    apply plugin: 'java'
+    apply plugin: 'idea'
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'maven-publish'
+    apply plugin: 'signing'
 
     idea {
         module {
@@ -54,39 +40,76 @@ allprojects {
         }
     }
 
-    publishing {
-        repositories {
-            maven {
-                url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2"
-                credentials {
-                    username = System.getenv("MAVEN_USERNAME")
-                    password = System.getenv("MAVEN_PASSWORD")
-                }
-            }
-/*             maven {
-                name = "GitHubPackages"
-                url = uri("https://maven.pkg.github.com/limaofeng/jfantasy-framework")
-                credentials {
-                    username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
-                    password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
-                }
-            } */
-        }
+    repositories {
+        maven { url "https://jcenter.bintray.com" }
+    }
 
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+
+    [compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'
+
+    compileJava.dependsOn(processResources)
+
+    manifest {
+        attributes 'provider': 'gradle'
+    }
+
+    javadoc {
+        options.tags = ["date"]
+        options.addStringOption("charset", "UTF-8")
+        if (JavaVersion.current().isJava8Compatible()) {
+            options.addBooleanOption('Xdoclint:none', true)
+        }
+        if (JavaVersion.current().isJava9Compatible()) {
+            options.addBooleanOption('html5', true)
+        }
+    }
+
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.boot:spring-boot-dependencies:${LIB_SPRING_BOOT_VER}"
+        }
+    }
+
+    tasks.withType(Test).configureEach {
+        useJUnitPlatform()
+
+        ignoreFailures = true
+    }
+
+    task javadocJar(type: Jar) {
+        archiveClassifier = "javadoc"
+        from javadoc
+    } 
+
+    task sourceJar(type: Jar) {
+        archiveClassifier = "sources"
+        from sourceSets.main.allSource
+    }
+
+    task copyDependencies(type: Sync) {
+        from configurations.compileClasspath
+        from configurations.testCompileClasspath
+        into 'build/dependencies'
+    }
+
+    publishing {
         publications {
             mavenJava(MavenPublication) {
                 from components.java
-                // artifact sourcesJar
-                // artifact javadocJar
+
+                artifact sourceJar
+                artifact javadocJar
 
                 pom {
                     name = 'jFantasy-Framework'
                     description = 'SpringBoot + JPA + GraphQL'
-                    url = 'https://chaos.asany.cn/jfantasy-framework'
+                    url = 'https://github.com/limaofeng/jfantasy-framework'
                     licenses {
                         license {
                             name = 'The MIT License'
-                            url = 'https://github.com/limaofeng/jfantasy-framework/blob/master/LICENSE'
+                            url = 'https://raw.githubusercontent.com/limaofeng/jfantasy-framework/master/LICENSE'
                         }
                     }
                     developers {
@@ -103,73 +126,21 @@ allprojects {
                     }
                 }
             }
+        }
 
-            maven(MavenPublication) {
-                groupId project.group
-                artifactId project.name
-                version project.version
-
-                from components.java
+        repositories {
+            maven {
+                url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2"
+                credentials {
+                    username = System.getenv("MAVEN_USERNAME")
+                    password = System.getenv("MAVEN_PASSWORD")
+                }
             }
         }
     }
 
     signing {
         sign publishing.publications.mavenJava
-    }
-
-}
-
-subprojects {
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
-
-    [compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'
-
-    compileJava.dependsOn(processResources)
-
-    manifest {
-        attributes 'provider': 'gradle'
-    }
-
-    dependencyManagement {
-        imports {
-            mavenBom "org.springframework.boot:spring-boot-dependencies:${LIB_SPRING_BOOT_VER}"
-        }
-    }
-
-    tasks.withType(Test).configureEach {
-        useJUnitPlatform()
-
-        ignoreFailures = true
-    }
-
-    configurations {
-        published
-    }
-
-    // task javadocJar(type: Jar) {
-    //     classifier = 'javadoc'
-    //     from javadoc
-    // }
-
-    task sourceJar(type: Jar) {
-        from sourceSets.main.allSource
-        archiveClassifier = 'sources'
-    }
-
-    task copyDependencies(type: Sync) {
-        from configurations.compileClasspath
-        from configurations.testCompileClasspath
-        into 'build/dependencies'
-    }
-
-    publishing {
-        publications {
-            mavenJava(MavenPublication) {
-                artifact sourceJar
-            }
-        }
     }
 
 }
