ci: 测试 spotless 插件

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ githook {
         "commit-msg" {
             task = "commitlint -Dmsgfile=\$1"
         }
+        "pre-commit" {
+            shell = "./gradlew spotlessApply"
+        }
     }
 }
 
