--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ githook {
             task = "commitlint -Dmsgfile=\$1"
         }
         "pre-commit" {
-            shell = "./gradlew spotlessApply && git add -A ."
+            shell = "./gradlew spotlessApply && git add -u"
         }
     }
 }
