--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,3 @@
-# This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
-
 name: Publish
 
 on:
@@ -9,7 +6,7 @@ on:
     - 'v*'
 
 jobs:
-  build:
+  release:
 
     runs-on: ubuntu-latest
     permissions:
@@ -52,16 +49,8 @@ jobs:
         MAVEN_USERNAME: ${{secrets.MAVEN_USERNAME}}
         MAVEN_PASSWORD: ${{secrets.MAVEN_PASSWORD}}
 
-    # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
-    # the publishing section of your build.gradle
-    # - name: Publish to GitHub Packages
-    #   run: ./gradlew publish
-    #   env:
-    #     USERNAME: ${{ github.actor }}
-    #     TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   github-release:
-    needs: build
+    needs: release
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
