ci: 支持发布到 maven snapshots

--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,7 @@ subprojects {
     task javadocJar(type: Jar) {
         archiveClassifier = "javadoc"
         from javadoc
-    } 
+    }
 
     task sourceJar(type: Jar) {
         archiveClassifier = "sources"
@@ -137,7 +137,11 @@ subprojects {
 
         repositories {
             maven {
-                url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2"
+                if (project.hasProperty('snapshots')) {
+                    url = "https://s01.oss.sonatype.org/content/repositories/snapshots"
+                } else {
+                    url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2"
+                }
                 credentials {
                     username = System.getenv("MAVEN_USERNAME")
                     password = System.getenv("MAVEN_PASSWORD")
