--- a/gradle/spotless.gradle
+++ b/gradle/spotless.gradle
@@ -1,6 +1,13 @@
 apply plugin: "com.diffplug.spotless"
 
 spotless {
+    format 'misc', {
+        target '*.gradle', '*.md', '.gitignore'
+
+        trimTrailingWhitespace()
+        indentWithTabs()
+        endWithNewline()
+    }
     java {
         target 'src/*/java/**/*.java'
 
